// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`CodeSnippet  can render 1`] = `
<div
  className="p-code-snippet"
>
  <CodeSnippetBlock
    code="Test"
    icon={null}
    isWrapped={false}
    key="code-snippet-block-0"
    numbered={false}
  />
</div>
`;

exports[`CodeSnippet  can render snippet with title 1`] = `
<div
  className="p-code-snippet"
>
  <CodeSnippetBlock
    code="Test"
    icon={null}
    isWrapped={false}
    key="code-snippet-block-0"
    numbered={false}
    title="Title"
  />
</div>
`;
